# serializer version: 1
# name: TestResponsesCount.test_responses_count
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT JSONExtractString(properties, '$survey_id') as survey_id,
         count()
  FROM events
  WHERE event = 'survey sent'
    AND team_id = 2
    AND timestamp >= '2024-01-21 14:40:09'
  GROUP BY survey_id
  '''
# ---
# name: TestResponsesCount.test_responses_count_only_after_first_survey_started
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT JSONExtractString(properties, '$survey_id') as survey_id,
         count()
  FROM events
  WHERE event = 'survey sent'
    AND team_id = 2
    AND timestamp >= '2024-04-25 14:40:09'
  GROUP BY survey_id
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_survey"
  WHERE (NOT "clairview_survey"."archived"
         AND "clairview_survey"."end_date" IS NULL
         AND "clairview_survey"."start_date" IS NOT NULL
         AND "clairview_survey"."team_id" = 2
         AND NOT ("clairview_survey"."type" = 'api'))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.1
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.2
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.3
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.4
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_survey"
  WHERE (NOT "clairview_survey"."archived"
         AND "clairview_survey"."end_date" IS NULL
         AND "clairview_survey"."start_date" IS NOT NULL
         AND "clairview_survey"."team_id" = 2
         AND NOT ("clairview_survey"."type" = 'api'))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.5
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.6
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."api_token" = 'token123'
  LIMIT 21
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.7
  '''
  SELECT "clairview_survey"."id",
         "clairview_survey"."team_id",
         "clairview_survey"."name",
         "clairview_survey"."description",
         "clairview_survey"."linked_flag_id",
         "clairview_survey"."targeting_flag_id",
         "clairview_survey"."internal_targeting_flag_id",
         "clairview_survey"."type",
         "clairview_survey"."conditions",
         "clairview_survey"."questions",
         "clairview_survey"."appearance",
         "clairview_survey"."created_at",
         "clairview_survey"."created_by_id",
         "clairview_survey"."start_date",
         "clairview_survey"."end_date",
         "clairview_survey"."updated_at",
         "clairview_survey"."archived",
         "clairview_survey"."responses_limit",
         "clairview_survey"."iteration_count",
         "clairview_survey"."iteration_frequency_days",
         "clairview_survey"."iteration_start_dates",
         "clairview_survey"."current_iteration",
         "clairview_survey"."current_iteration_start_date",
         "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics",
         T4."id",
         T4."key",
         T4."name",
         T4."filters",
         T4."rollout_percentage",
         T4."team_id",
         T4."created_by_id",
         T4."created_at",
         T4."deleted",
         T4."active",
         T4."rollback_conditions",
         T4."performed_rollback",
         T4."ensure_experience_continuity",
         T4."usage_dashboard_id",
         T4."has_enriched_analytics",
         T5."id",
         T5."key",
         T5."name",
         T5."filters",
         T5."rollout_percentage",
         T5."team_id",
         T5."created_by_id",
         T5."created_at",
         T5."deleted",
         T5."active",
         T5."rollback_conditions",
         T5."performed_rollback",
         T5."ensure_experience_continuity",
         T5."usage_dashboard_id",
         T5."has_enriched_analytics"
  FROM "clairview_survey"
  LEFT OUTER JOIN "clairview_featureflag" ON ("clairview_survey"."linked_flag_id" = "clairview_featureflag"."id")
  LEFT OUTER JOIN "clairview_featureflag" T4 ON ("clairview_survey"."targeting_flag_id" = T4."id")
  LEFT OUTER JOIN "clairview_featureflag" T5 ON ("clairview_survey"."internal_targeting_flag_id" = T5."id")
  WHERE ("clairview_survey"."team_id" = 2
         AND NOT ("clairview_survey"."archived"))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.8
  '''
  SELECT ("clairview_survey_actions"."survey_id") AS "_prefetch_related_val_survey_id",
         "clairview_action"."id",
         "clairview_action"."name",
         "clairview_action"."team_id",
         "clairview_action"."description",
         "clairview_action"."created_at",
         "clairview_action"."created_by_id",
         "clairview_action"."deleted",
         "clairview_action"."post_to_slack",
         "clairview_action"."slack_message_format",
         "clairview_action"."updated_at",
         "clairview_action"."bytecode",
         "clairview_action"."bytecode_error",
         "clairview_action"."steps_json",
         "clairview_action"."pinned_at",
         "clairview_action"."is_calculating",
         "clairview_action"."last_calculated_at"
  FROM "clairview_action"
  INNER JOIN "clairview_survey_actions" ON ("clairview_action"."id" = "clairview_survey_actions"."action_id")
  WHERE 'clairview_survey_actions'.'survey_id' IN ('00000000-0000-0000-0000-000000000000'::uuid,
                                                 '00000000-0000-0000-0000-000000000001'::uuid)
  '''
# ---
